fix: gaps

--- a/src/index.css
+++ b/src/index.css
@@ -4,20 +4,21 @@
   box-sizing: border-box;
 }
 
-html,
-body {
+html {
   height: 100%;
+}
+
+body {
+  min-height: 100%;
+  margin: 0;
+  display: flex;
+  overflow-y: auto;
   font-family: var(--font-family-system);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
 
-body {
-  margin: 0;
-  overflow-y: auto;
-}
-
 #root {
-  height: 100%;
+  flex: 1;
   padding: var(--gap-l) var(--gap-m);
 }
